Correction bug alignement droite pour l'analyse des partis
suppression de dir='rtl'

--- a/result_elec.html
+++ b/result_elec.html
@@ -242,7 +242,7 @@
 			// Menu analyse par partis
 			
 			html+="<div class='menuAnalyse'><u>Analyser un parti :</u>";
-			html+="<form><select dir='rtl' name='parti' id='parti' onChange='analyseParti()'>";
+			html+="<form><select name='parti' id='parti' onChange='analyseParti()'>";
 			html+="<option value='choix' id='choix'>Choisissez un parti</option>";
 			if(document.getElementById('tour1').checked){
 				for (x in tour1){
